# cria

./: .env.example  .gitignore  AUTO_SUGGESTION_DEMO.md  CHANGELOG.md  COLUMN_LAYOUTS.md  Cargo.toml  MODAL_TESTING_STRATEGY.md  QUICK_ACTIONS.md  README-QUICKADD.md  README.md  ROADMAP.md  TESTING.md  TEST_ENV_TASKS.md  UNDO_REDO_IMPLEMENTATION.md  UNDO_REDO_IMPLEMENTATION_SUMMARY.md  cargo-test.config.yaml  config.example.yaml  devenv.nix  docs.json  flake.nix  libterminal_capabilities.rlib  refactoring_todo.md  test-config.yaml
.cargo/: config.toml
.github/chatmodes/: cria.chatmode.md
examples/: parser_demo.rs
src/: color_helper.rs  config.rs  debug.rs  first_run.rs  lib.rs  main.rs  terminal_capabilities.rs  ui_loop.rs  url_utils.rs  vikunja_client.rs  vikunja_parser.rs
src/tui/: app.rs  confirmation.rs  events.rs  handlers.rs  keybinds.rs  mod.rs  modals.rs  pickers.rs  ui.rs  utils.rs
tests/: api_filters.rs  api_projects.rs  api_tasks.rs  api_users.rs  app.rs  comment_integration.rs  debug_input_flow.rs  debug_label_parsing.rs  filter_project_override.rs  keybindings.rs  keybindings_organized.rs  label_submission.rs  layout_sorting.rs  layouts.rs  modals.rs  modals_advanced.rs  modals_comprehensive.rs  pickers.rs  property_based_modals.rs  quick_actions.rs  quick_actions_colorization.rs  square_bracket_parsing.rs  table_columns.rs  task_colorization.rs  task_default.rs  tui_edit_modal.rs  tui_form_edit_state.rs  tui_modals.rs  tui_navigation.rs  tui_quick_add.rs  ui_rendering.rs  undo_redo.rs  url_deduplication.rs  url_opening.rs  url_ui_integration.rs
(+61 files in other folders)
