[package]
name = "cria"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = { version = "0.26.0", features = ["all-widgets"] }
crossterm = "0.27.0"
reqwest = { version = "0.12.2", features = ["json"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
