[package]
name = "cria"
version = "0.9.2"
edition = "2021"

[lib]
name = "cria"
path = "src/lib.rs"

[[bin]]
name = "cria"
path = "src/main.rs"

[[bin]]
name = "cria-quick"
path = "src/bin/quick.rs"

[[example]]
name = "parser_demo"
path = "examples/parser_demo.rs"

[dependencies]
ratatui = { version = "0.26.0", features = ["all-widgets"] }
crossterm = "0.27.0"
reqwest = { version = "0.12.2", features = ["json", "blocking"] }
tokio = { version = "1.36.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
dotenv = "0.15.0"
clap = { version = "4.5", features = ["env"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
chrono-english = "0.1"
aho-corasick = "1.1"
itertools = "0.12"
fuzzy-matcher = "0.3"
dirs = "5.0"
anyhow = "1.0"
# For terminal image support
image = "0.24"
# For file type detection
infer = "0.15"
# For terminal capability detection
term = "0.7"

[dev-dependencies]
proptest = "1.0"
